<resources>
    <string name="app_name">Swipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_image">Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="tax_rate">Tax Rate</string>
    <string name="save">Save</string>
    <string name="select_image">Select Image</string>
    <string name="add_product">Add Product</string>
    <string name="product_type">Product Type</string>
    <string name="add_product_button">Add Product Button</string>
</resources>